--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Voip try",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "npm install --dev",
+    "heroku-prebuild": "npm install webpack",
     "start": "webpack",
     "dev": "webpack-dev-server --mode development --open --progress"
   },
