--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "heroku-prebuild": "npm install webpack",
-    "start": "webpack",
+    "start": "cross-env NODE_ENV=production webpack --mode production",
     "dev": "webpack-dev-server --mode development --open --progress"
   },
   "keywords": [],
